--- a/JSF_HelloWorld/pom.xml
+++ b/JSF_HelloWorld/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>JSF_HelloWorld</name>
+    <name>Catalog-of-space-objects</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
