--- a/JSF_HelloWorld/pom.xml
+++ b/JSF_HelloWorld/pom.xml
@@ -56,6 +56,11 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>3.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>13.0.4</version>
+        </dependency>
 
     </dependencies>
 
